--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="oompa.loompa.blast" >
 
+    <uses-sdk android:minSdkVersion="11"
+        android:maxSdkVersion="22"
+        android:targetSdkVersion="21"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/BlastTheme" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
