--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,12 @@ android {
         exclude 'META-INF/NOTICE'
     }
 }
+apply plugin: 'com.google.gms.google-services'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:design:22.2.0'
+    compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.firebase:firebase-client-android:2.3.1+'
 }
