--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:maxSdkVersion="22"
         android:targetSdkVersion="21"/>
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
 
     <application
         android:name=".BlastApplication"
@@ -14,7 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/BlastTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".GoogleOAuthActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="Blast"/>
     </application>
 
 </manifest>
