--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:targetSdkVersion="21"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
-
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <application
         android:name=".BlastApplication"
         android:allowBackup="true"
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/BlastTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".GoogleOAuthActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity"
+            android:label="@string/app_name"/>
     </application>
 
 </manifest>
