--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,14 @@
         </activity>
         <activity android:name=".MainActivity"
             android:label="@string/app_name"/>
+        <activity
+            android:name=".MessageActivity"
+            android:label="Messages"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
     </application>
 
 </manifest>
